<resources>
    <string name="app_name">Trail</string>
    <string name="load">load</string>
    <string name="description_logo">description_logo</string>
    <string name="hint_login">Введите логин</string>
    <string name="hint_password">Введите пароль</string>
    <string name="enter">Войти</string>
    <string name="is_filled">Все поля должны быть заполнены!</string>
    <string name="description_map">map</string>
    <string name="bathhouse_desc">Баня \"Дымная\"\nГрафик\nОписание объекта</string>
    <string name="description_bathhouse">bathhouse</string>
    <string name="open_map">Открыть карту</string>
    <string name="hello_user">Привет, Polina%s</string>
    <string name="tour_base_name">Добрынино</string>
    <string name="tour_base_description">Эко-отель в лесу\nМолоко альпийских коз\nКозий сыр ручной работы\nЭкскурсии по ферме\nПроизводство полезных натуральных продуктов и приобщение населения к традиционным культурным ценностям Ярославской области!</string>
</resources>